tests/neg/i7529.scala
extension fooOps on [A](a: A) with

  @nonsense    // error: not found: nonsense
  def foo = ???